src/styles/components/hero.css
.hero-section {
  display: block;
  position: relative;
  height: 85vh;
  border-radius: 2rem;
  overflow: hidden;
  margin-bottom: 4rem;

  > .image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 2rem;
    object-position: left top;
  }
}

.banner-text {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  color: var(--text);
  text-align: right;
  padding: 1rem;
  margin: 0 2rem;
  border-radius: 1rem;

  > .title {
    font-size: var(--font-size-10);
  }

  > .tagline {
    font-size: var(--font-size-4);
    font-weight: 300;
    margin: 1rem 0;
  }
}

